--- a/style.css
+++ b/style.css
@@ -178,6 +178,14 @@ a:hover {
   text-align: center;
 }
 
+.title-container-about {
+  margin: 10px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  background-color: #fff;
+  text-align: left;
+}
+
 .title-container h1 {
   margin: 20px 0;
   font-size: 64px;
